--- a/cupuacu.html
+++ b/cupuacu.html
@@ -21,12 +21,13 @@
                 <a href="index.html">Página Inicial</a>
                 <a href="acai.html">Açai</a>
                 <a href="cupuacu.html">Cupuaçu</a>
-                <a href="sobre.html">Sobre</a>
+                <a href="sobre.html">Desenvolvedor</a>
             </div>
             <div class="section-1-div3">
                 <a href=""><ion-icon class="ion-header" name="logo-instagram"></ion-icon></a>
                 <a href=""><ion-icon class="ion-header" name="logo-whatsapp"></ion-icon></a>
                 <a href="https://github.com/paulojorgers" target="_blank"> <ion-icon class="ion-header" name="logo-github"></ion-icon></a>
+                <a href=""><ion-icon class="ion-header" name="cart-outline"></ion-icon></a>
 
             </div>
         </section>
@@ -180,6 +181,52 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-3">
+            <div class="section-3-div1">
+                <h1>Nossos Combos Promocionais</h1>
+
+                <div class="section-3-div2">
+                    <div>
+                        <a href=""><img src="img/promo-acai.png" alt=""></a>
+                    </div>
+                    <div>
+                        <a href=""><img src="img/omelhor.png" alt=""></a>
+                    </div>
+                    <div>
+                        <a href=""><img src="img/promo-acai-cupuaçu.png" alt=""></a>
+                    </div>
+                    <div>
+                        <a href=""><img src="img/monteoseu.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-5 ac">
+            <div class="section-5-div1 info">
+                <h1> Estamos por todas as Cidades</h1>
+                <p>
+                    Nossa loja de açaí está presente em todo o Brasil, levando o sabor autêntico da Amazônia para cada
+                    canto do país. Seja no calor das praias do Nordeste, nas grandes metrópoles do Sudeste ou nas
+                    regiões mais remotas do interior, garantimos a mesma qualidade e frescor em cada pote. Combinando o
+                    tradicional açaí com o irresistível cupuaçu, oferecemos uma experiência única que já conquistou o
+                    coração dos brasileiros. Não importa onde você esteja, sempre terá um ponto da nossa loja pertinho
+                    de você, pronta para refrescar o seu dia!
+
+                    Descubra o verdadeiro sabor da Amazônia e venha se deliciar na nossa loja de açaí! Não há nada como
+                    o frescor de um açaí cremoso ou o toque exótico do cupuaçu para deixar o seu dia ainda mais
+                    especial. Aqui, cada colherada é uma explosão de sabor e energia, preparada com ingredientes
+                    selecionados e com o carinho que você merece. E o melhor de tudo: estamos pertinho de você, em todo
+                    o Brasil! Não perca tempo, chame a galera e venha provar as nossas irresistíveis promoções. A
+                    natureza te convida, é só chegar e saborear!
+                </p>
+            </div>
+            <div class="section-5-div1 gif" >
+                <img src="img/brasil.gif" alt="">
+            </div>
+        </section>
+
     </main>
 
     <footer>
