--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="index.html">Página Inicial</a>
                 <a href="acai.html">Açai</a>
                 <a href="cupuacu.html">Cupuaçu</a>
-                <a href="sobre.html">Sobre</a>
+                <a href="sobre.html">Desenvolvedor</a>
             </div>
             <div class="section-1-div3">
                 <a href=""><ion-icon class="ion-header" name="logo-instagram"></ion-icon></a>
@@ -62,7 +62,7 @@
 
         <section class="section-3">
             <div class="section-3-div1">
-                <h1>Nossos Combos</h1>
+                <h1>Nossos Combos Promocionais</h1>
 
                 <div class="section-3-div2">
                     <div>
