--- a/sobre.html
+++ b/sobre.html
@@ -8,12 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <section class="section-1">
+        <section class="section-1 sobreheader">
             <div class="section-1-div1">
                 <a href=""><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
             </div>
@@ -21,20 +21,39 @@
                 <a href="index.html">Página Inicial</a>
                 <a href="acai.html">Açai</a>
                 <a href="cupuacu.html">Cupuaçu</a>
-                <a href="sobre.html">Sobre</a>
+                <a href="sobre.html">Desenvolvedor</a>
             </div>
             <div class="section-1-div3">
                 <a href=""><ion-icon class="ion-header" name="logo-instagram"></ion-icon></a>
                 <a href=""><ion-icon class="ion-header" name="logo-whatsapp"></ion-icon></a>
-                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header" name="logo-github"></ion-icon></a>
+                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header"
+                        name="logo-github"></ion-icon></a>
 
             </div>
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <section class="sectionsobre">
+            <div class="sobregeral">
+                <div class="sectionsobre-div">
+                    <div class="info-perfil">
+                        <img src="img/perfil.jpeg" alt="">
+                        <h1>Paulo Jorge Rodrigues</h1>
+                    </div>
+                    <div class="info-info">
+                        <img src="img/logo-senac.png" alt="">
+                        <h3>Gestão em Tecnologia da Informação</h3>
+                    </div>
+                </div>
+                <div class="sectionsobre-div2">
 
-    <footer>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="sb">
         <section class="footer">
             <div class="footer-div1">
                 <h4> Desenvolvido por: ©Paulo Jorge Rodrigues - 2024</h4>
@@ -42,7 +61,8 @@
             <div class="section-1-div3 ionfooter">
                 <a href=""><ion-icon class="ion-header" name="logo-instagram"></ion-icon></a>
                 <a href=""><ion-icon class="ion-header" name="logo-whatsapp"></ion-icon></a>
-                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header" name="logo-github"></ion-icon></a>
+                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header"
+                        name="logo-github"></ion-icon></a>
 
             </div>
         </section>
