--- a/cupuacu.html
+++ b/cupuacu.html
@@ -15,7 +15,7 @@
     <header>
         <section class="section-1">
             <div class="section-1-div1">
-                <a href=""><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
@@ -47,7 +47,7 @@
                         <img src="img/cupuaçu_1kg.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Pote 1kg</h5>
-                          <p class="card-text">O açaí 70% é conhecido pelo
+                          <p class="card-text">O cupuaçu 70% é conhecido pelo
                             seu sabor intenso. Com uma
                             concentração maior da fruta,
                             ele encanta até os
@@ -61,11 +61,11 @@
                         <img src="img/cupuaçu-3kg.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title hc">Pote 3,5 kg</h5>
-                          <p class="card-text">Nosso açaí com guaraná é o
+                          <p class="card-text">Nosso cupuçu com banana é o
                             grande destaque. Ele é feito com
-                            açaí original da Amazônia e um
+                            cupuaçu original da Amazônia e um
                             toque especial de extrato natural
-                            de guaraná, 3,5KG.</p>
+                            de banana e frutas vermelhas, 3,5KG.</p>
                           <a href="#" class="btn btn-primary">Fazer pedido</a>
                         </div>
                       </div>
