--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header-1">
         <section class="section-1">
             <div class="section-1-div1">
-                <a href=""><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
