--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
     <header>
         <section class="section-1 sobreheader">
             <div class="section-1-div1">
-                <a href=""><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
@@ -42,8 +42,30 @@
                         <h1>Paulo Jorge Rodrigues</h1>
                     </div>
                     <div class="info-info">
-                        <img src="img/logo-senac.png" alt="">
-                        <h3>Gestão em Tecnologia da Informação</h3>
+                        <ion-icon class="ion-info" name="school-outline"></ion-icon>
+                        <h3>Gestão em Tecnologia da Informação | Faculdade de Tecnologia Senac DF</h3>
+                    </div>
+                    <div class="info-info">
+                        <ion-icon class="ion-info" name="school-outline"></ion-icon>
+                        <h3>Desenvolvedor Frontend | SENAI</h3>
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+                    <div class="info-info">
+                        <ion-icon class="ion-info" name="briefcase-outline"></ion-icon>
+                        <h3>Web Designer Freelancer</h3> 
+                    </div>
+                    <div class="info-info">
+                        <ion-icon class="ion-info" name="logo-github"></ion-icon>
+                        <h3>GitHub | <a class="info-git" href="https://github.com/paulojorgers" target="_blank">github.com/paulojorgers</a></h3>
+                    </div>
+                    <div class="info-info">
+                        <ion-icon class="ion-info" name="mail-outline"></ion-icon>
+                        <h3>contato@paulojorgers.com.br</h3>
+                    </div>
+                    <div class="info-perfil"></div>
+                        <ion-icon class="ion-info smile" name="happy-outline"></ion-icon>
                     </div>
                 </div>
                 <div class="sectionsobre-div2">
