--- a/acai.html
+++ b/acai.html
@@ -15,7 +15,7 @@
     <header>
         <section class="section-1">
             <div class="section-1-div1">
-                <a href=""><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
@@ -49,7 +49,8 @@
                           <h5 class="card-title">Pote 1kg</h5>
                           <p class="card-text">O açaí 70% é conhecido pelo
                             seu sabor intenso. Com uma
-                            concentração maior da fruta,
+                            concentração maior da fruta, feito com
+                            açaí original,
                             ele encanta até os
                             paladares mais exigentes, sabor mais forte, 1KG.</p>
                           <a href="#" class="btn btn-primary">Fazer pedido</a>
@@ -65,7 +66,7 @@
                             grande destaque. Ele é feito com
                             açaí original da Amazônia e um
                             toque especial de extrato natural
-                            de guaraná, 3,5KG.</p>
+                            de guaraná, para paladares mais exigentes  3,5KG.</p>
                           <a href="#" class="btn btn-primary">Fazer pedido</a>
                         </div>
                       </div>
