correcao de imagens

--- a/acai.html
+++ b/acai.html
@@ -15,7 +15,7 @@
     <header>
         <section class="section-1">
             <div class="section-1-div1">
-                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Acai Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
@@ -44,7 +44,7 @@
             <div class="sectionacai-2-div1">
                 <div>
                     <div class="card" style="width: 18rem;">
-                        <img src="img/açai7l.webp" class="card-img-top" alt="...">
+                        <img src="img/acai7l.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Pote 1kg</h5>
                           <p class="card-text">O açaí 70% é conhecido pelo
@@ -59,7 +59,7 @@
                 </div>
                 <div>
                     <div class="card" style="width: 18rem;">
-                        <img src="img/açai5l.webp" class="card-img-top" alt="...">
+                        <img src="img/acai5l.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Pote 3,5 kg</h5>
                           <p class="card-text">Nosso açaí com guaraná é o
@@ -195,7 +195,7 @@
                         <a href=""><img src="img/omelhor.png" alt=""></a>
                     </div>
                     <div>
-                        <a href=""><img src="img/promo-acai-cupuaçu.png" alt=""></a>
+                        <a href=""><img src="img/promo-acai-cupuacu.png" alt=""></a>
                     </div>
                     <div>
                         <a href=""><img src="img/monteoseu.png" alt=""></a>
