--- a/cupuacu.html
+++ b/cupuacu.html
@@ -15,7 +15,7 @@
     <header>
         <section class="section-1">
             <div class="section-1-div1">
-                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Acai Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
@@ -44,7 +44,7 @@
             <div class="sectioncupuacu-2-div1">
                 <div>
                     <div class="card" style="width: 18rem;">
-                        <img src="img/cupuaçu_1kg.webp" class="card-img-top" alt="...">
+                        <img src="img/cupuacu_1kg.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Pote 1kg</h5>
                           <p class="card-text">O cupuaçu 70% é conhecido pelo
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <div class="card" style="width: 18rem;">
-                        <img src="img/cupuaçu-3kg.webp" class="card-img-top" alt="...">
+                        <img src="img/cupuacu-3kg.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title hc">Pote 3,5 kg</h5>
                           <p class="card-text">Nosso cupuçu com banana é o
@@ -194,7 +194,7 @@
                         <a href=""><img src="img/omelhor.png" alt=""></a>
                     </div>
                     <div>
-                        <a href=""><img src="img/promo-acai-cupuaçu.png" alt=""></a>
+                        <a href=""><img src="img/promo-acai-cupuacu.png" alt=""></a>
                     </div>
                     <div>
                         <a href=""><img src="img/monteoseu.png" alt=""></a>
