--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
     <header>
         <section class="section-1 sobreheader">
             <div class="section-1-div1">
-                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Acai Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
