--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header-1">
         <section class="section-1">
             <div class="section-1-div1">
-                <a href="index.html"><img src="img/Logotipo Açaí Simples Roxo.svg" alt=""></a>
+                <a href="index.html"><img src="img/Logotipo Acai Simples Roxo.svg" alt=""></a>
             </div>
             <div class="section-1-div2">
                 <a href="index.html">Página Inicial</a>
@@ -72,7 +72,7 @@
                         <a href=""><img src="img/omelhor.png" alt=""></a>
                     </div>
                     <div>
-                        <a href=""><img src="img/promo-acai-cupuaçu.png" alt=""></a>
+                        <a href=""><img src="img/promo-acai-cupuacu.png" alt=""></a>
                     </div>
                     <div>
                         <a href=""><img src="img/monteoseu.png" alt=""></a>
