--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Açai BSB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="shortcut icon" href="img/favicon.png" />
+
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,7 +29,8 @@
             <div class="section-1-div3">
                 <a href=""><ion-icon class="ion-header" name="logo-instagram"></ion-icon></a>
                 <a href=""><ion-icon class="ion-header" name="logo-whatsapp"></ion-icon></a>
-                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header" name="logo-github"></ion-icon></a>
+                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header"
+                        name="logo-github"></ion-icon></a>
 
             </div>
         </section>
@@ -125,7 +128,7 @@
                     natureza te convida, é só chegar e saborear!
                 </p>
             </div>
-            <div class="section-5-div1 gif" >
+            <div class="section-5-div1 gif">
                 <img src="img/brasil.gif" alt="">
             </div>
         </section>
@@ -141,7 +144,8 @@
             <div class="section-1-div3 ionfooter">
                 <a href=""><ion-icon class="ion-header" name="logo-instagram"></ion-icon></a>
                 <a href=""><ion-icon class="ion-header" name="logo-whatsapp"></ion-icon></a>
-                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header" name="logo-github"></ion-icon></a>
+                <a href="https://github.com/paulojorgers" target="_blank"><ion-icon class="ion-header"
+                        name="logo-github"></ion-icon></a>
 
             </div>
         </section>
